log
Wed, May 14, 2025  8:55:07 AM: 
 sudoku.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:66:21: error: implicit declaration of function 'add_to_list' [-Werror=implicit-function-declaration]
                     add_to_list(list, adj_node);  // Agregamos el nodo a la lista
                     ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Wed, May 14, 2025  9:12:49 AM: 
 sudoku.c | 30 ++++++++++++++++--------------
 1 file changed, 16 insertions(+), 14 deletions(-)
 tests:  0|5
total_score: 0/70
797f664
Wed, May 14, 2025  9:14:41 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8bb7bb8
Wed, May 14, 2025  9:16:25 AM: 
 sudoku.c | 48 +++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 47 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
5c9dfc6
